# Truc

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  TODO  run_game.sh
include/: Makefile  animated_sprite.hpp  array.hpp  array_defs.hpp  asset.hpp  box.hpp  color.hpp  debug.hpp  defs.hpp  drawable.hpp  error.hpp  event.hpp  font.hpp  game.hpp  game_defs.hpp  game_part.hpp  geometry.hpp  image.hpp  movable.hpp  music.hpp  random.hpp  render.hpp  safe_mutex.hpp  screen_base.hpp  screen_credits.hpp  screen_defs.hpp  screen_game_play.hpp  screen_intro.hpp  screen_options.hpp  screen_rules.hpp  screens.hpp  sound.hpp  sprite.hpp  sprite_animation.hpp  sprite_array.hpp  sprite_layer.hpp  sprite_layer_area.hpp  sprite_layer_area_array.hpp  sprite_layer_array.hpp  sprite_sheet.hpp  (+7 more)
src/: Game.h  Menu.cpp  Menu.h  animated_sprite.cpp  array.cpp  asset.cpp  box.cpp  color.cpp  debug.cpp  drawable.cpp  error.cpp  event.cpp  font.cpp  game.cpp  game_part.cpp  geometry.cpp  image.cpp  main.cpp  movable.cpp  music.cpp  random.cpp  render.cpp  safe_mutex.cpp  screen_base.cpp  screen_credits.cpp  screen_game_play.cpp  screen_intro.cpp  screen_options.cpp  screen_rules.cpp  screens.cpp  sound.cpp  sprite.cpp  sprite_animation.cpp  sprite_array.cpp  sprite_layer.cpp  sprite_layer_area.cpp  sprite_layer_area_array.cpp  sprite_layer_array.cpp  sprite_sheet.cpp  string_tools.cpp  (+6 more)
src/games/Truc/: Truc.cpp  Truc.h
src/games/escambrit/: banca.cpp  deck.cpp  escambrit.cpp  game.cpp  print.cpp  statistics.cpp
src/games/truc/: deck.cpp  game.cpp  human.cpp  player.cpp  print.cpp
src/headers/: banca.h  print.h  statistics.h
src/utils/: Utils.cpp  Utils.h
(+27 files in other folders)
